--- a/RetroCalculator/Base.lproj/LaunchScreen.storyboard
+++ b/RetroCalculator/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina5_5" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -14,14 +18,75 @@
                         <viewControllerLayoutGuide type="bottom" id="xb3-aO-Qok"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchbg" translatesAutoresizingMaskIntoConstraints="NO" id="3Ug-P3-Si0">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="BoK-2e-H3c">
+                                <rect key="frame" x="5" y="35" width="404" height="696"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hf8-z3-fjx">
+                                        <rect key="frame" x="0.0" y="0.0" width="404" height="70"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Retro-Calc" translatesAutoresizingMaskIntoConstraints="NO" id="1hu-gu-cx1">
+                                                <rect key="frame" x="0.0" y="0.0" width="404" height="70"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="70" id="U7r-uJ-znB"/>
+                                                    <constraint firstAttribute="width" constant="310" id="vqd-90-A64"/>
+                                                </constraints>
+                                            </imageView>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="U0q-Bp-WHh">
+                                        <rect key="frame" x="0.0" y="70" width="404" height="426"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="robot" translatesAutoresizingMaskIntoConstraints="NO" id="wKb-5w-tbN">
+                                                <rect key="frame" x="0.0" y="0.0" width="404" height="426"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="290" id="2yG-Ag-MTA"/>
+                                                    <constraint firstAttribute="width" constant="280" id="ZIf-JB-NeN"/>
+                                                </constraints>
+                                            </imageView>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wYM-iP-Ygr">
+                                        <rect key="frame" x="0.0" y="496" width="404" height="200"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchground" translatesAutoresizingMaskIntoConstraints="NO" id="r4d-dD-JMw">
+                                                <rect key="frame" x="0.0" y="0.0" width="404" height="200"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="200" id="xgV-fo-gDj"/>
+                                                </constraints>
+                                            </imageView>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="3Ug-P3-Si0" secondAttribute="bottom" id="1oe-PP-fvU"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="BoK-2e-H3c" secondAttribute="bottom" constant="5" id="22o-kJ-nnG"/>
+                            <constraint firstItem="3Ug-P3-Si0" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="B54-H5-n9R"/>
+                            <constraint firstItem="BoK-2e-H3c" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" constant="35" id="H21-nC-osT"/>
+                            <constraint firstItem="BoK-2e-H3c" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="5" id="SE9-rp-tiU"/>
+                            <constraint firstAttribute="trailing" secondItem="BoK-2e-H3c" secondAttribute="trailing" constant="5" id="aWG-mu-AVc"/>
+                            <constraint firstAttribute="trailing" secondItem="3Ug-P3-Si0" secondAttribute="trailing" id="rbD-lp-NLr"/>
+                            <constraint firstItem="3Ug-P3-Si0" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="uYU-RL-wgx"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="48.75" y="371.83098591549299"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Retro-Calc" width="755" height="111"/>
+        <image name="launchbg" width="1433" height="957"/>
+        <image name="launchground" width="999" height="225"/>
+        <image name="robot" width="786" height="402"/>
+    </resources>
 </document>
